--- a/KahppaUI/release.json
+++ b/KahppaUI/release.json
@@ -1,3 +1,6 @@
 {
-    "include": ["googlereg.ttf"]
+  "repo_url": "https://github.com/Kahppachino/KahppaUI",
+  "repo_subpath": ".",
+  "repo_commit": "39f6524",
+  "preview_image_path": "images/SuchMeme/Clean Gameview.jpg"
 }
