--- a/release.json
+++ b/release.json
@@ -1,6 +1,6 @@
 {
   "repo_url": "https://github.com/Kahppachino/KahppaUI",
-  "repo_subpath": "KahppaUI/",
+  "repo_subpath": "KahppaUI",
   "repo_commit": "39f6524",
   "preview_image_path": "images/SuchMeme/Clean Gameview.jpg"
 }
